--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,93 @@
-body {
-    background-color: blue;
+.body {
+    font-family: 'Roboto', ;
+}
+
+.alert-container{}
+
+.callout-container{
+    height: 100vh;
+
+    background: url("../images/winery.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+}
+.opaque-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.quotes-container{}
+
+.features-container{}
+
+.favourites-container{}
+
+/* block dividers*/
+
+.block-divider {
+    height:5px;
+    width:200px;
+    border:0;
+    background-color:#6F1E51;
+}
+
+/*--jumbotron--*/
+
+.jumbotron {
+    background-color: transparent;
+}
+.jumbotron-header{
+    color: #ffffff;
+    font: bold;
+    margin-bottom: 30px;
+}
+
+.jumbotron small {
+    font-size: 60%;
+    font-style: italic;
+    color: #d0d0d0;
+}
+
+.jumbotron .lead {
+    font-weight: 400;
+    margin: 25px 0;
+    color: #a7a7a7;
+}
+
+
+
+/* Buttons*/
+
+.btn--cta{
+    font-weight:bold;
+    border-radius: 23px;
+    width:160px;
+    color:white;
+}
+
+.btn--purple{
+    background-color: #6F1E51;
+    border-color: ##6F1E51;
+}
+
+.btn--purple:hover,
+.btn--purple:active,
+.btn--purple:focus,
+.btn--purple:active:focus {
+    background-color: #9b1e59;
+    border-color: #9b1e59;
+    color: white;
+    transition-duration: 0.2s;
 }
