--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,13 @@
     font-family: 'Roboto', ;
 }
 
-.alert-container{}
+.alert-container .col-12{
+    padding-left:0;
+    padding-right:0;
+    background-color: purple;
+}
+
+.site-wide-alert{}
 
 .callout-container{
     height: 100vh;
@@ -19,6 +25,7 @@
 
     position: relative;
 }
+
 .opaque-overlay {
     position: absolute;
     top: 0;
@@ -28,11 +35,62 @@
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+/* NavBar*/
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+}
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+    border: 0;
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+
+
+
 .quotes-container{}
 
 .features-container{}
 
 .favourites-container{}
+
+/*--jumbotron--*/
+
+.jumbotron {
+    background-color: transparent;
+}
+
+.jumbotron-header{
+    color: #ffffff;
+    font: bold;
+    margin-bottom: 30px;
+    margin-top: 100px;
+}
+
+.jumbotron .lead {
+    font-weight: 400;
+    margin: 25px 0;
+    color: #a7a7a7;
+}
+
+.jumbotron small {
+    font-size: 60%;
+    font-style: italic;
+    color: #d0d0d0;
+}
 
 /* block dividers*/
 
@@ -43,30 +101,9 @@
     background-color:#6F1E51;
 }
 
-/*--jumbotron--*/
-
-.jumbotron {
-    background-color: transparent;
+.block-divider--short{
+    width: 100px;
 }
-.jumbotron-header{
-    color: #ffffff;
-    font: bold;
-    margin-bottom: 30px;
-}
-
-.jumbotron small {
-    font-size: 60%;
-    font-style: italic;
-    color: #d0d0d0;
-}
-
-.jumbotron .lead {
-    font-weight: 400;
-    margin: 25px 0;
-    color: #a7a7a7;
-}
-
-
 
 /* Buttons*/
 
@@ -79,7 +116,7 @@
 
 .btn--purple{
     background-color: #6F1E51;
-    border-color: ##6F1E51;
+    border-color: #6F1E51;
 }
 
 .btn--purple:hover,
