--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,7 @@
     font-family: 'Roboto', ;
 }
 
-.alert-container .col-12{
-    padding-left:0;
-    padding-right:0;
-    background-color: purple;
-}
+
 
 .site-wide-alert{
     border-radius: 0;
@@ -19,9 +15,62 @@
     color:#30270d;
 }
 
-a{
+a {
     color: #6F1E51;
     font-weight: bold;
+}
+
+/* NavBar*/
+
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding-left: 0;
+    padding-right: 0;
+    width: 100%;
+}
+
+.navbar {
+    margin-bottom: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.25);
+    border: 0;
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand{
+    font-weight: bold;
+}
+
+/*Containers*/
+
+.alert-container .col-12{
+    padding-left:0;
+    padding-right:0;
+    background-color: purple;
+}
+
+.content-container{
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+
+.container-wrapper{
+    
+}
+
+.container-wrapper--purple{
+    background-color: #6F1E51;
+    color: #fff;
+}
+
+.favourites-container h2{
+    color: #fff;
 }
 
 .bottle-container{
@@ -54,40 +103,6 @@ a{
     width: 100%;
     background-color: rgba(0, 0, 0, 0.75);
 }
-
-/* NavBar*/
-
-.navalert-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    padding-left: 0;
-    padding-right: 0;
-    width: 100%;
-}
-
-.navbar {
-    margin-bottom: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.25);
-    border: 0;
-}
-
-.navbar .navbar-toggler {
-    border: 0;
-}
-
-.navbar-brand{
-    font-weight: bold;
-}
-
-
-.quotes-container{}
-
-.features-container{}
-
-.favourites-container{}
 
 /*--jumbotron--*/
 
@@ -126,26 +141,6 @@ a{
     margin-top: 0;
 }
 
-/*content-containers*/
-
-.content-container{
-    padding-top: 75px;
-    padding-bottom: 75px;
-}
-
-.container-wrapper{
-    
-}
-
-.container-wrapper--purple{
-    background-color: #6F1E51;
-    color: #fff;
-}
-
-.favourites-container h2{
-    color: #fff;
-}
-
 /* block dividers*/
 
 .block-divider {
@@ -182,10 +177,6 @@ a{
     border-color: #6F1E51;
 }
 
-.btn-purple-main{
-    margin-top: 25px;
-}
-
 .btn--purple:hover,
 .btn--purple:active,
 .btn--purple:focus,
@@ -194,19 +185,6 @@ a{
     border-color: #892364;
     color: white;
     transition-duration: 0.2s;
-}
-
-/*icons*/
-
-.feature {
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.feature i{
-    margin-bottom:20px;
-    font-size: 45px;
-    line-height: 45px;
 }
 
 .feature .btn{
@@ -228,3 +206,17 @@ a{
     color: white;
     transition-duration: 0.2s;
 }
+
+/*icons*/
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i{
+    margin-bottom:20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
